<resources>
    <string name="app_name">MealDB</string>
    <string name="description">Description</string>
    <string name="instruction">Instruction</string>
    <string name="ingredients">Ingredients</string>
    <string name="measure">Measure</string>
    <string name="data_ingredients">%s\n%s\n%s\n%s\n%s\n%s\n%s\n%s\n%s\n%s\n%s\n%s\n%s\n%s\n%s\n%s\n%s\n%s\n%s\n%s\n</string>
    <string name="data_measure">%s\n%s\n%s\n%s\n%s\n%s\n%s\n%s\n%s\n%s\n%s\n%s\n%s\n%s\n%s\n%s\n%s\n%s\n%s\n%s\n</string>

    <string name="dummy_meal_name">Baked salmon with fennel &amp; tomatoes</string>
    <string name="dummy_category">Seafood</string>
    <string name="dummy_area">British</string>
    <string name="dummy_instruction">Heat oven to 180C/fan 160C/gas 4. Trim the fronds from the fennel and set aside. Cut the fennel bulbs in half, then cut each half into 3 wedges. Cook in boiling salted water for 10 mins, then drain well. Chop the fennel fronds roughly, then mix with the parsley and lemon zest.\r\n\r\nSpread the drained fennel over a shallow ovenproof dish, then add the tomatoes. Drizzle with olive oil, then bake for 10 mins. Nestle the salmon among the veg, sprinkle with lemon juice, then bake 15 mins more until the fish is just cooked. Scatter over the parsley and serve.</string>
    <string name="dummy_ingredients">Fennel\nParsley\nLemon\nCherry Tomatoes\nOlive Oil\nSalmon\nBlack Olives</string>
    <string name="dummy_measure">2 medium\n2 tbs chopped\nJuice of 1\n175g\n1 tbs\n350g\nto serve</string>
</resources>