<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragment.DetailFragment">

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/iv_meal"
                android:layout_width="0dp"
                android:layout_height="300dp"
                android:adjustViewBounds="true"
                android:scaleType="fitXY"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="ContentDescription"
                tools:src="@drawable/beaked_salmon" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/cl_contents"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginTop="-20dp"
                android:background="@drawable/shape_round_top"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/iv_meal"
                app:layout_constraintVertical_bias="1.0"
                tools:visibility="visible">

                <TextView
                    android:id="@+id/tv_name"
                    style="@style/Text.TitleLarge"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="32dp"
                    android:layout_marginEnd="16dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:text="@string/dummy_meal_name" />

                <TextView
                    android:id="@+id/tv_category"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:textColor="@color/black"
                    app:layout_constraintStart_toStartOf="@+id/tv_name"
                    app:layout_constraintTop_toBottomOf="@+id/tv_name"
                    tools:text="@string/dummy_category" />

                <TextView
                    android:id="@+id/tv_area"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:drawablePadding="4dp"
                    android:gravity="center_vertical"
                    android:textColor="@color/black"
                    app:layout_constraintBottom_toBottomOf="@+id/tv_category"
                    app:layout_constraintStart_toEndOf="@+id/tv_category"
                    app:layout_constraintTop_toTopOf="@+id/tv_category"
                    tools:text="@string/dummy_area" />

                <TextView
                    android:id="@+id/t_ingredients"
                    style="@style/Text.TitleMedium"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="@string/ingredients"
                    app:layout_constraintStart_toStartOf="@+id/tv_category"
                    app:layout_constraintTop_toBottomOf="@+id/tv_category" />

                <TextView
                    android:id="@+id/tv_ingredients"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:drawablePadding="4dp"
                    android:gravity="center_vertical"
                    android:textColor="@color/black"
                    app:layout_constraintStart_toStartOf="@+id/tv_category"
                    app:layout_constraintTop_toBottomOf="@+id/t_ingredients"
                    tools:text="@string/dummy_ingredients" />

                <TextView
                    android:id="@+id/t_measure"
                    style="@style/Text.TitleMedium"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/measure"
                    app:layout_constraintBottom_toBottomOf="@+id/t_ingredients"
                    app:layout_constraintStart_toEndOf="@id/guideline"
                    app:layout_constraintTop_toTopOf="@+id/t_ingredients" />

                <TextView
                    android:id="@+id/tv_measures"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    app:layout_constraintBottom_toBottomOf="@+id/tv_ingredients"
                    app:layout_constraintStart_toStartOf="@+id/guideline"
                    app:layout_constraintTop_toTopOf="@+id/tv_ingredients"
                    app:layout_constraintVertical_bias="0.0"
                    tools:text="@string/dummy_measure" />

                <TextView
                    android:id="@+id/t_instruction"
                    style="@style/Text.TitleMedium"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="16dp"
                    android:text="@string/instruction"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="@+id/tv_ingredients"
                    app:layout_constraintTop_toBottomOf="@+id/tv_ingredients" />

                <TextView
                    android:id="@+id/tv_instruction"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:layout_marginBottom="16dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="@+id/t_instruction"
                    app:layout_constraintStart_toStartOf="@+id/t_instruction"
                    app:layout_constraintTop_toBottomOf="@+id/t_instruction"
                    tools:text="@string/dummy_instruction" />

                <androidx.constraintlayout.widget.Guideline
                    android:id="@+id/guideline"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    app:layout_constraintGuide_percent="0.5" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

    <com.google.android.material.progressindicator.LinearProgressIndicator
        android:id="@+id/progressBar"
        android:layout_width="48dp"
        android:layout_height="wrap_content"
        android:indeterminate="true"
        android:visibility="gone"
        app:indicatorColor="@color/orange_dark"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:trackCornerRadius="8dp" />

</androidx.constraintlayout.widget.ConstraintLayout>